[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odos-py"
version = "0.1.0"
description = "A modern Python client for the Odos DEX Aggregator API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "robertdev" }]
keywords = ["odos", "dex", "aggregator", "defi", "ethereum", "swap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
exec = ["web3>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/treew-inc/odos-py"
Documentation = "https://docs.odos.xyz/build/api-docs"
Repository = "https://github.com/treew-inc/odos-py"

[tool.hatch.build.targets.wheel]
packages = ["src/odos_py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# Keep typing.Optional/Union: PEP 604 (`X | None`) in evaluated annotations is
# not safe on the 3.9 runtime we still support.
ignore = ["UP006", "UP007", "UP035", "UP045"]

[tool.mypy]
# Runtime supports 3.9+, but this mypy version requires a 3.10+ target.
python_version = "3.10"
strict = true
warn_unused_configs = true
files = ["src/odos_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit the live network (deselected by default)",
]
addopts = "-m 'not integration'"
